Make sure we initialize conn to NULL, because a routine we call may give an error and not touch conn, and then we get an error when trying to TALLOC_FREE it.

https://bugzilla.samba.org/show_bug.cgi?id=11234

Signed-off-by: Richard Sharpe <rsharpe@samba.org>
Reviewed-by: Jeremy Allison <jra@samba.org>
(cherry picked from commit 471744a32d37f187c87f9bfa6f860b69446b9afe)